# mee_guide

./: .env.example  .gitignore  README.md  docker-compose.yml
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/lib/: api.ts
extension/: manifest.chrome.json  manifest.edge.json  manifest.firefox.json  package-lock.json  package.json  test_extension.spec.js  webpack.config.js
extension/src/background/: index.js
extension/src/content/: index.js  sidebar-mount.js  snapshot.js  spotlight.js
extension/src/popup/: index.js  popup.html
nginx/conf.d/: default.conf
services/crawler/: Dockerfile  pyproject.toml
services/dashboard-api/: Dockerfile  pyproject.toml
services/dashboard-api/app/: main.py
services/dashboard-api/app/api/v1/: router.py
services/dashboard-api/app/api/v1/endpoints/: auth.py  domains.py  guides.py
services/dashboard-api/app/core/: auth.py  config.py  database.py  deps.py
services/dashboard-api/tests/: conftest.py  test_auth_api.py  test_auth_unit.py
services/guide-registry/: Dockerfile  pyproject.toml
services/inference/: Dockerfile  pyproject.toml
services/inference/app/: main.py
services/inference/app/api/v1/: router.py
services/inference/app/api/v1/endpoints/: infer.py  save_workflow.py
services/inference/app/core/: complexity.py  config.py  providers.py  query_router.py
services/inference/tests/: conftest.py  test_complexity.py  test_inference_api.py  test_query_router.py
services/migrations/: init.sql
(+23 files in other folders)
